ags (2.1.19)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* minor improvements

ags (2.1.18)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved code of AgsSetBufferSize task
	* improved code of AgsSetSamplerate task
	* fixed AgsSeekSoundcard:offset set/get property
	* fixed AgsSetDevice:device set property
	* added ags_resize_audio_test.c
	* added ags_seek_soundcard_test.c
	* added ags_set_audio_channels_test.c
	* added ags_set_buffer_size_test.c
	* added ags_set_device_test.c
	* added ags_set_format_test.c
	* added ags_set_muted_test.c
	* added ags_set_samplerate_test.c

ags (2.1.17)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsMessageEnvelope missing struct for API comments
	* fixed potential string read boundary excess in ags_simple_file_read_oscillator()
	* improved ref count of ags_message_delivery_add_queue() and ags_message_delivery_remove_queue()

ags (2.1.16)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved always show add/remove port of AgsSoundcardEditor
	* fixed reading/writing AgsOscillator sync-point
	* fixed division by zero in ags_synth_util.c

ags (2.1.15)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* decoupled AgsJackClient for input from JACK

ags (2.1.14)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented reset soundcard property of AgsWindow
	* fixed AgsXorgApplicationContext ref counting
	* fixed AgsAudioApplicationContext ref counting
	* fixed add/remove pulseaudio soundcard by configuration
	* fixed add/remove JACK soundcard by configuration

ags (2.1.13)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved AgsFunctionalDrumTest and AgsFunctionalFFPlayerTest to assert if directory exists
	* completed ags_functional_osc_server_test.c
	* fixed missing include in ags_play_wave_channel_run.c
	* fixed memory leaks of AgsOscFrontController
	* fixed memory leaks of AgsOscActionController